<?xml version="1.0"?>
<package format="2">
  <name>ros-stream</name>
  <version>1.0.0</version>
  <description>Gstreamer ROS plugin</description>
  <maintainer email="saleh@jpl.nasa.gov">Ayman Saleh</maintainer>
  <license>MIT</license>
  <url type="website">http://jpl.nasa.gov</url>
  <author email="saleh@jpl.nasa.gov">Ayman Saleh</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
